scrollbar fix

--- a/client/web-app/styles/sass/sass-style/views/player.scss
+++ b/client/web-app/styles/sass/sass-style/views/player.scss
@@ -35,11 +35,6 @@
 
 }
 
-.horizontal-bottom {
-    overflow-x: scroll !important;
-    margin-left: 154px;
-}
-
 .sync-scroll {
     overflow: auto;
 }
@@ -47,20 +42,24 @@
 .guide-header::-webkit-scrollbar {
     display: none;
 }
-#userGuide::-webkit-scrollbar {
-    display: none;
-}
+
 
 .user-guide-panel {
     width: 100%;
     height: 300px;
     overflow-y: scroll !important;
+    overflow-x: hidden;
     white-space: nowrap;
     padding-top: 2px;
     -webkit-transition: all 1s ease-in-out;
     -moz-transition: all 1s ease-in-out;
     -o-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
+}
+
+.horizontal-bottom {
+    overflow-x: scroll !important;
+    margin-left: 154px;
 }
 
 .guide-header {
